refactored newsletter view css optimizations (removed most of the floats) Worked on the slider to prevent a horizontal scrollbar added new wallet screenshots

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8167,12 +8167,10 @@ html {
 .intro-header {
   background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
   color: #fff;
-  float: left;
   padding-bottom: 10px;
   padding-top: 10px;
   text-align: center;
   position: relative;
-  width: 100%;
   border-bottom: 1px solid #f79321;
 }
 
@@ -11228,6 +11226,10 @@ fieldset[disabled] .navbar-inverse .navbar-btn.active {
   width: 15%;
 }
 
+.section-heading {
+  font-size: 26px;
+}
+
 .section-heading img {
   float: left;
   margin-right: 6%;
@@ -11494,9 +11496,8 @@ fieldset[disabled] .navbar-inverse .navbar-btn.active {
 }
 
 .subsc {
-  float: left;
-  text-align: center;
   width: 100%;
+  text-align: left;
 }
 
 .subsc > h2 {
@@ -11518,13 +11519,15 @@ fieldset[disabled] .navbar-inverse .navbar-btn.active {
 }
 
 .btn.btn-default.subscribe-btn {
-  background-color: #f79321;
-  border-color: #f79321;
-  color: #fff;
+  background-color: white;
+  color: #f79321;
+  border: 1px solid white;
+  border-bottom: 2px solid white;
   font-size: 19px;
-  font-weight: bold;
+  font-weight: 700;
   padding: 15px 30px;
   text-transform: uppercase;
+  border-radius: 2px;
 }
 
 .sub-text-box .input-group-btn {
@@ -11534,7 +11537,7 @@ fieldset[disabled] .navbar-inverse .navbar-btn.active {
 
 .sub-text-box .form-control {
   border: 2px solid transparent;
-  border-radius: 4px 0 0 4px !important;
+  border-radius: 2px 0 0 2px !important;
   -webkit-box-shadow: none;
           box-shadow: none;
   color: #34495e;
@@ -11547,12 +11550,20 @@ fieldset[disabled] .navbar-inverse .navbar-btn.active {
 }
 
 .subscribe {
-  background-image: url(/images/footer-bg.jpg?37db98485356c8973b66e7ba62c0659b);
-  background-size: cover;
-  float: left;
-  padding-bottom: 100px;
-  padding-top: 70px;
+  background-color: #f79321;
+  padding-bottom: 20px;
+  padding-top: 20px;
   width: 100%;
+  text-align: left !important;
+}
+
+.subscribe .section-heading {
+  font-weight: 700;
+  text-align: left;
+}
+
+.subscribe .abouthead .p {
+  text-align: left;
 }
 
 .footerwrap {
@@ -12527,7 +12538,8 @@ img.bannerlogo {
   }
 
   .section-heading {
-    text-align: center;
+    text-aligN: center;
+    padding: 10px;
   }
 
   .lead {
