--- a/resources/assets/sass/general.scss
+++ b/resources/assets/sass/general.scss
@@ -10,11 +10,10 @@ body, html {
 .intro-header {
 	background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
 	color: #fff;
-	float: left;
 	padding-bottom: 10px;
 	padding-top: 10px;
-	text-align: center; position: relative;
-	width: 100%;
+	text-align: center;
+	position: relative;
 	border-bottom: 1px solid $pascal-color;
 }
 
