--- a/resources/assets/sass/responsive.scss
+++ b/resources/assets/sass/responsive.scss
@@ -27,7 +27,8 @@
     }
 
     .section-heading {
-        text-align: center
+        text-aligN: center;
+        padding: 10px;
     }
 
     .lead {
